2010-06-15  Miklos Szeredi <miklos@szeredi.hu>

	* Fix out-of-source build.  Patch by Jörg Faschingbauer

2010-05-10  Miklos Szeredi <miklos@szeredi.hu>

	* Remove "chmod root" from install of fusermount.  Reported by
	Lucas C. Villa Real

2010-04-26  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.4

2010-04-26  Miklos Szeredi <miklos@szeredi.hu>

	* Fix checking for symlinks in umount from /tmp.  Reported by Al
	Viro

	* Fix umounting if /tmp is a symlink.  Reported by Franco Broi

2010-02-18  Miklos Szeredi <miklos@szeredi.hu>

	* Fix definition of FUSE_OPT_END for C++.  Reported by Tim
	Bruylants

2010-02-03  Miklos Szeredi <miklos@szeredi.hu>

	* Fix stack alignment for clone()

2010-02-01  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.3

2010-02-01  Miklos Szeredi <miklos@szeredi.hu>

	* Using "--no-canonicalize" with umount(8) conflicts with the race
	fix, sinceit assumes the supplied path is absolute, while the race
	fix relies on the path being relative to the current directory.
	Reported by Tom Rindborg

2010-01-26  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.2

2010-01-21  Miklos Szeredi <miklos@szeredi.hu>

	* Fix race if two "fusermount -u" instances are run in parallel.
	Reported by Dan Rosenberg

	* Make sure that the path to be unmounted doesn't refer to a
	symlink

2010-01-14  Miklos Szeredi <miklos@szeredi.hu>

	* Fix compile error on FreeBSD.  Patch by Jay Sullivan

2009-12-17  Miklos Szeredi <miklos@szeredi.hu>

	* Use '--no-canonicalize' option of mount(8) (available in
	util-linux-ng version 2.17 or greater) to avoid calling
	readling(2) on the newly mounted filesystem before the mount
	procedure is finished.  This has caused a deadlock if "audit" was
	enabled in the kernel.  Also use '--no-canonicalize' for umount to
	avoid touching the mounted filesystem.

2009-09-11  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.1

2009-08-25  Miklos Szeredi <miklos@szeredi.hu>
