@@ -619,6 +619,7 @@ static struct fuse_operations iconv_oper = {
 	.bmap		= iconv_bmap,
 
 	.flag_nullpath_ok = 1,
+	.flag_nopath = 1,
 };
 
 static struct fuse_opt iconv_opts[] = {
